--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,11 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loading the data: Wholesale customers data"
+    "\n",
+    "# Load the dataset\n",
+    "url = './Wholesalecustomersdata.csv'\n",
+    "data = pd.read_csv(url)\n",
+    "\n",
+    "# Display the first few rows of the dataset\n",
+    "print(\"First few rows of the dataset:\")\n",
+    "print(data.head())\n",
+    "\n",
+    "# Display the summary statistics of the dataset\n",
+    "print(\"\\nSummary statistics of the dataset:\")\n",
+    "print(data.describe())\n"
    ]
   },
   {
@@ -84,7 +95,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:"
+    "print(data.columns)\n",
+    "print(\"\")\n",
+    "print(data.info())\n",
+    "print(\"\\nNull values:\")\n",
+    "print(data.isnull().sum())\n",
+    "print(\"\\nCorrelation Matrix\")\n",
+    "correlation_matrix = data.corr()\n",
+    "print(correlation_matrix)\n",
+    "print(\"\\ndata describe\")\n",
+    "print(data.describe())\n",
+    "data.hist(figsize=(12, 10)) \n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# Calculate total spend per customer\n",
+    "data['TotalSpend'] = data.drop(columns=['Channel', 'Region']).sum(axis=1)\n",
+    "\n",
+    "# Sort the data by total spend\n",
+    "sorted_data = data.sort_values(by='TotalSpend', ascending=False)\n",
+    "\n",
+    "# Calculate cumulative spend\n",
+    "sorted_data['CumulativeSpend'] = sorted_data['TotalSpend'].cumsum()\n",
+    "\n",
+    "# Calculate cumulative percentage of customers\n",
+    "sorted_data['CumulativeCustomers'] = (sorted_data.index + 1) / len(sorted_data)\n",
+    "\n",
+    "# Calculate cumulative percentage of spend\n",
+    "sorted_data['CumulativeSpendPercentage'] = sorted_data['CumulativeSpend'] / sorted_data['TotalSpend'].sum()\n",
+    "\n",
+    "# Plot the cumulative spend vs customers\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(sorted_data['CumulativeCustomers'], sorted_data['CumulativeSpendPercentage'], marker='o')\n",
+    "plt.xlabel('Cumulative Percentage of Customers')\n",
+    "plt.ylabel('Cumulative Percentage of Spend')\n",
+    "plt.title('Cumulative Spend vs Cumulative Customers')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -113,7 +160,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "\n",
+    "# Function to remove outliers using IQR\n",
+    "def remove_outliers(df, columns):\n",
+    "    for col in columns:\n",
+    "        Q1 = df[col].quantile(0.25)\n",
+    "        Q3 = df[col].quantile(0.75)\n",
+    "        IQR = Q3 - Q1\n",
+    "        lower_bound = Q1 - 1.5 * IQR\n",
+    "        upper_bound = Q3 + 1.5 * IQR\n",
+    "        df = df[(df[col] >= lower_bound) & (df[col] <= upper_bound)]\n",
+    "    return df\n",
+    "\n",
+    "# Columns to check for outliers\n",
+    "columns = ['Fresh', 'Milk', 'Grocery', 'Frozen', 'Detergents_Paper', 'Delicassen']\n",
+    "\n",
+    "# Remove outliers from the dataset\n",
+    "data_cleaned = remove_outliers(data, columns)\n",
+    "\n",
+    "print(\"Data after outlier removal:\")\n",
+    "print(data_cleaned.describe())\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -143,15 +211,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your import here:\n",
-    "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Your code here:\n"
+    "# Initialize StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Fit and transform the data\n",
+    "customers_scale = scaler.fit_transform(data_cleaned.drop(columns=['Channel', 'Region']))\n",
+    "\n",
+    "# Convert the scaled data back to a DataFrame\n",
+    "customers_scale = pd.DataFrame(customers_scale, columns=data_cleaned.columns.drop(['Channel', 'Region']))\n",
+    "\n",
+    "# Display the first few rows of the scaled data\n",
+    "print(\"Scaled data:\")\n",
+    "print(customers_scale.head())\n"
    ]
   },
   {
@@ -165,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -173,7 +250,16 @@
    "source": [
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "# Your code here:"
+    "k_means = KMeans(init = \"k-means++\", n_clusters = 4, n_init = 12)\n",
+    "\n",
+    "k_means.fit(customers_scale)\n",
+    "\n",
+    "labels = k_means.labels_\n",
+    "\n",
+    "data_cleaned['labels'] = labels\n",
+    "\n",
+    "print(\"Clustered data with labels:\") \n",
+    "print(data_cleaned.head())"
    ]
   },
   {
@@ -185,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_customers['Label'] = clusters"
+    "data_cleaned['Label'] = clusters"
    ]
   },
   {
@@ -218,7 +304,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:"
+    "# Count the values in the 'Label' column\n",
+    "label_counts = data_cleaned['Label'].value_counts()\n",
+    "\n",
+    "print(\"Counts of each cluster label:\")\n",
+    "print(label_counts)\n"
    ]
   },
   {
@@ -240,7 +330,17 @@
    "source": [
     "from sklearn.cluster import DBSCAN \n",
     "\n",
-    "# Your code here\n"
+    "dbscan = DBSCAN(eps=0.5)\n",
+    "\n",
+    "dbscan.fit(customers_scale)\n",
+    "\n",
+    "dbscan_lables = dbscan.labels_\n",
+    "\n",
+    "data_cleaned['labels_DBSCAN'] = dbscan_lables\n",
+    "\n",
+    "print(\"Clustered data with DBSCAN labels:\") \n",
+    "print(data_cleaned.head())\n",
+    "\n"
    ]
   },
   {
@@ -252,11 +352,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "dbscan_label_counts = data_cleaned['labels_DBSCAN'].value_counts()\n",
+    "\n",
+    "print(dbscan_label_counts)\n"
    ]
   },
   {
@@ -283,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +403,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Plot the scatter plots for 'Detergents_Paper' vs 'Milk'\n",
+    "plt.figure(figsize=(14, 6))\n",
+    "\n",
+    "# Plot K-Means clustering\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.scatter(data_cleaned['Detergents_Paper'], data_cleaned['Milk'], c=data_cleaned['Label'], cmap='viridis', s=50)\n",
+    "plt.title('K-Means Clustering: Detergents_Paper vs Milk')\n",
+    "plt.xlabel('Detergents_Paper')\n",
+    "plt.ylabel('Milk')\n",
+    "\n",
+    "# Plot DBSCAN clustering\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.scatter(data_cleaned['Detergents_Paper'], data_cleaned['Milk'], c=data_cleaned['labels_DBSCAN'], cmap='viridis', s=50)\n",
+    "plt.title('DBSCAN Clustering: Detergents_Paper vs Milk')\n",
+    "plt.xlabel('Detergents_Paper')\n",
+    "plt.ylabel('Milk')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -317,7 +443,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:"
+    "\n",
+    "# Plot the scatter plots for 'Detergents_Paper' vs 'Milk'\n",
+    "plt.figure(figsize=(14, 6))\n",
+    "\n",
+    "# Plot K-Means clustering\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.scatter(data_cleaned['Detergents_Paper'], data_cleaned['Milk'], c=data_cleaned['Label'], cmap='viridis', s=50)\n",
+    "plt.title('K-Means Clustering: Detergents_Paper vs Milk')\n",
+    "plt.xlabel('Detergents_Paper')\n",
+    "plt.ylabel('Milk')\n",
+    "\n",
+    "# Plot DBSCAN clustering\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.scatter(data_cleaned['Detergents_Paper'], data_cleaned['Milk'], c=data_cleaned['labels_DBSCAN'], cmap='viridis', s=50)\n",
+    "plt.title('DBSCAN Clustering: Detergents_Paper vs Milk')\n",
+    "plt.xlabel('Detergents_Paper')\n",
+    "plt.ylabel('Milk')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -333,7 +478,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:"
+    "\n",
+    "# Plot the scatter plots for 'Frozen' vs 'Delicassen'\n",
+    "plt.figure(figsize=(14, 6))\n",
+    "\n",
+    "# Plot K-Means clustering\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.scatter(data_cleaned['Frozen'], data_cleaned['Delicassen'], c=data_cleaned['Label'], cmap='viridis', s=50)\n",
+    "plt.title('K-Means Clustering: Frozen vs Delicassen')\n",
+    "plt.xlabel('Frozen')\n",
+    "plt.ylabel('Delicassen')\n",
+    "\n",
+    "# Plot DBSCAN clustering\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.scatter(data_cleaned['Frozen'], data_cleaned['Delicassen'], c=data_cleaned['labels_DBSCAN'], cmap='viridis', s=50)\n",
+    "plt.title('DBSCAN Clustering: Frozen vs Delicassen')\n",
+    "plt.xlabel('Frozen')\n",
+    "plt.ylabel('Delicassen')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -349,7 +513,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:"
+    "# Group by 'labels' from K-Means and compute the means\n",
+    "kmeans_grouped = data_cleaned.groupby('Label').mean()\n",
+    "\n",
+    "# Group by 'labels_DBSCAN' from DBSCAN and compute the means\n",
+    "dbscan_grouped = data_cleaned.groupby('labels_DBSCAN').mean()\n",
+    "\n",
+    "print(\"Mean values for each cluster (K-Means):\")\n",
+    "print(kmeans_grouped)\n",
+    "\n",
+    "print(\"\\nMean values for each cluster (DBSCAN):\")\n",
+    "print(dbscan_grouped)\n"
    ]
   },
   {
@@ -381,11 +555,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:"
+    "\n",
+    "\n",
+    "# Define the range of cluster numbers to experiment with\n",
+    "cluster_range = range(2, 10)\n",
+    "\n",
+    "# Define the column pairs to visualize\n",
+    "x_col, y_col = 'Grocery', 'Fresh'\n",
+    "\n",
+    "plt.figure(figsize=(20, 30))\n",
+    "\n",
+    "for i, n_clusters in enumerate(cluster_range, start=1):\n",
+    "    # Initialize and fit K-Means model\n",
+    "    k_means = KMeans(init=\"k-means++\", n_clusters=n_clusters, n_init=12, random_state=42)\n",
+    "    k_means.fit(customers_scale)\n",
+    "    \n",
+    "    # Get the cluster labels\n",
+    "    labels = k_means.labels_\n",
+    "    \n",
+    "    # Plot the clustering results\n",
+    "    plt.subplot(4, 2, i)\n",
+    "    plt.scatter(data_cleaned[x_col], data_cleaned[y_col], c=labels, cmap='viridis', s=50)\n",
+    "    plt.title(f'K-Means Clustering with {n_clusters} Clusters')\n",
+    "    plt.xlabel(x_col)\n",
+    "    plt.ylabel(y_col)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -412,7 +612,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "\n",
+    "\n",
+    "# Define different parameter settings\n",
+    "parameters = [\n",
+    "    {'eps': 0.3, 'min_samples': 5},\n",
+    "    {'eps': 0.5, 'min_samples': 5},\n",
+    "    {'eps': 0.7, 'min_samples': 5},\n",
+    "    {'eps': 0.5, 'min_samples': 10},\n",
+    "    {'eps': 0.5, 'min_samples': 20}\n",
+    "]\n",
+    "\n",
+    "# Loop through the parameter settings\n",
+    "for params in parameters:\n",
+    "    # Initialize the DBSCAN model with specified parameters\n",
+    "    dbscan = DBSCAN(eps=params['eps'], min_samples=params['min_samples'])\n",
+    "    \n",
+    "    # Fit the model to the scaled data\n",
+    "    dbscan.fit(customers_scale)\n",
+    "    \n",
+    "    # Get the cluster labels\n",
+    "    labels = dbscan.labels_\n",
+    "    \n",
+    "    # Plot the scatter plot for 'Grocery' vs 'Fresh'\n",
+    "    plt.figure(figsize=(7, 6))\n",
+    "    plt.scatter(data_cleaned['Grocery'], data_cleaned['Fresh'], c=labels, cmap='viridis', s=50)\n",
+    "    plt.title(f\"DBSCAN Clustering: eps={params['eps']}, min_samples={params['min_samples']}\")\n",
+    "    plt.xlabel('Grocery')\n",
+    "    plt.ylabel('Fresh')\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -427,7 +655,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -441,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   },
   "toc": {
    "base_numbering": 1,
